Fix variants tab Add Variant button and layout. Fix ag-grid headers to align center.

--- a/src/app/components/programming/program-request/variants-tab/variants-tab.component.scss
+++ b/src/app/components/programming/program-request/variants-tab/variants-tab.component.scss
@@ -17,77 +17,17 @@ fieldset {
   background: $light-grey;
 }
 
-.variants-table {
-    background-color: $white;
-    border-collapse: collapse;
-    border: $grey-border;
-    color: $black;
-
-  thead {
-    background-color: $primary-color;
-    color: $white;
+.add-variant-table {
+  td:first-child {
+    padding-left: 0;
   }
-
-  thead tr {
-    display:block;
-  }
-
   td {
-    border: $grey-border;
-    padding: 2px 10px;
+    padding: 0 10px;
   }
-
-  th {
-    border: $grey-border;
-    padding: 2px 10px;
-    font-weight: 500;
-    text-align: center;
-  }
-
-  th,  td {
-    width: 122px;
-    min-width: 122px;
-  }
-
-  tbody {
-   display:block;
-   overflow:auto;//set tbody to auto
-  }
-
-  .totals-line {
-    min-width: 520px;
-  }
-
-  .white-border {
-    border: 1px solid $white !important;
-  }
-
-  .notdborder {
-    border:0;
-  }
-
 }
 
-.table-editable {
-  position: relative;
-
-  th {
-    padding: 8px;
-  }
-
-  tr > td {
-   padding: 8px;
-  }
-
-  .editable-field {
-    background-color: #c6d9f1;
-    color: $black;
-    text-align: right;
-    &:hover {
-      cursor: pointer;
-      background-color: $light-grey;
-    }
-  }
+.variant-name {
+  display: inline;
 }
 
 .row-white {
@@ -148,7 +88,7 @@ fieldset {
 input {
   height: 32px;
 }
-// 
+//
 // .ag-header-group-cell-label{
 //   display:table;
 //   margin:0 auto;
